VDR Plugin 'epgsearch' Revision History
---------------------------------------
2025-05-15
thanks to Stefan Hofmann:
- remove compiler warnings
- some small fixes and annotations
- avoid string overflows

2025-03-20
fixes:
- fix timerdone processing if EPG has changed
- prevent crash in vdr 2.7.4

2024-09-13; Version 2.4.3
fixes:
- fix deprecated funtion GetEvent()

2024-04-07
fixes:
- add missing std::namespace (amair)

2024-01-31
fixes:
- fix Makefile for coreutils >= 9.4 (kfb77)
- add missing free (kfb77)

2023-06-08
fixes:
- removed subtitle limit (firefly)
- fix title containing more than one colon (firefly)

2023-05-28
fixes:
- Changed wenig to Wenig in German messages
- Avoid division by zero if StopTime-Starttime=0

2023-01-09; Version 2.4.2
new:
- Use perlregex-library pcre2 if available
fixes:
- timers not marked as done if 2 recordings stop same time
- remove dead code
- update spanish translation
- fix memory leaks
- do not lose recordingtime at change to winter time (kfb77)

2022-02-01
new:
- Evaluate vdr's Errorcount (vdr > 2.5.x)
  New config "Allowed Errors"
- Allow missing timer-Object in Recording-Done-Processing
  (vdr > 2.5.x compatibility)

2021-12-10
fixes:
- Wrong device selection for conflict check
- compareSubtitle supports more than 2 values

2021-05-24; Version 2.4.1
fixes:
- Fixed conflictcheck for encrypted channels with internal CAMs
- Fixed compiling with gcc11
- Updated deprecated calls to SetItemEvent
- Temporally(?) added #define DISABLE_TEMPLATES_COLLIDING_WITH_STL for
  compatibility with vdr 2.5.4

2021-04-12
new:
- Improved handling of remote timers
- Replace auto_ptr with unique_ptr for c++11 (kfb77@vdr-portal.de)
- Delay threads after pluginstart 10 secs (configurable)
- Changed fgets to allow compiling with clang
- Clarified "avoid repeats". Forced subtitle-comparison is named "yes" again
  New option "allow empty"
fixes:
- Fixed several lock sequence errors